sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value getNombervaleurs
  while (i<getNombervaleurs()) {
           ^