sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v=0
  var i=1
  var j=1
  while (i<getNombervaleurs()) {
    v=getValeur(i)
    while(!plusPetitQue(i-1,v)) {
      copie(i-1,i)
      i-=1
    }
    i=j
    i+=1
    j+=1
  }
}